@@ -229,10 +229,13 @@ Messenger: fixed bug which prevents viewing of other days in Message Wall
 	Edited file /modules/messageWall_view.php
 	
 Students: added parent information to leaver report
-	Edited file report_students_left.php
+	Edited file /modules/Students/report_students_left.php
 
 General: changed all references of thegibbon.org to gibbonedu.org
 	Edited various files
+
+Students: added parental emails to data update history, to allow for emailing of recalcitrant parents
+	Edited file /modules/Students/report_students_dataUpdaterHistory.php
 	
 
 v6.0.00
